# yew-reversi

./: .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  styles-2bf8b55cd6532127.css  tailwind.config.js  yew-reversi-834c7c308edd7409.js  yew-reversi-834c7c308edd7409_bg.wasm  yew-reversi-cdd3bbcb1b011de9.js  yew-reversi-cdd3bbcb1b011de9_bg.wasm
.github/workflows/: gh-pages.yml
experiments/: Cargo.toml
experiments/src/: main.rs
game_logic/: Cargo.toml
game_logic/src/: ai_agent.rs  board.rs  game_state.rs  lib.rs  monte_carlo_agent.rs  random_agent.rs  types.rs
game_logic/src/monte_carlo/: runner.rs  types.rs
src/: components.rs  game_logic.rs  game_state_context.rs  main.rs
src/components/: info_header.rs  reversi_cell.rs  reversi_table.rs  setting_header.rs
src/game_logic/: ai_agent.rs  board.rs  game_state.rs  random_agent.rs  types.rs
