[workspace]
members = [ "experiments", "game_logic"]

[package]
name = "yew-reversi"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-console = "0.3.0"
once_cell = "1.20.2"
rand = { version = "0.9.0" }
getrandom = { version = "0.3", features = ["wasm_js"] }
yew = { version = "^0.21.0", features= ["csr"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
game_logic = { path = 'game_logic' }
